--- a/view/admin/mainAdmin.html
+++ b/view/admin/mainAdmin.html
@@ -168,7 +168,7 @@ body{
     text-align: center;
     line-height: 3;
 }
-.menu_footer a{
+a.menu_footer{
     color: #a9afbb;
     text-decoration: none;
 }
@@ -455,6 +455,7 @@ select::-ms-expand{
 .table td{
     vertical-align: middle;
     word-break:break-all;
+    font-size: 11pt;
 }
 .tab_btn{
     width: 80px;
@@ -550,10 +551,9 @@ select::-ms-expand{
                     </div>
                 </li> <!-- 커뮤니티 서브메뉴 끝 -->
                 
-                <li class="menu_footer">
-                    <a href="../../index.html"><i class="fas fa-undo-alt"></i> 돌아가기</a>
-                </li>
-                
+                <a class="menu_footer" href="../../index.html">
+                    <li><i class="fas fa-undo-alt"></i> 돌아가기</li>
+                </a>
             </ul> <!-- 메뉴리스트 끝 -->
 
 
@@ -619,17 +619,17 @@ select::-ms-expand{
                 </div>
                 <div class="select_status">
                     <label for="sele1"><select name="dly_status" id="sele1">
-                        <option>-주문상태-</option>
-                        <option value="1">결제대기</option>
-                        <option value="2">결제완료</option>
-                        <option value="3">배송준비</option>
-                        <option value="4">배송중</option>
-                        <option value="5">배송완료</option>
-                        <option value="6">환불대기</option>
-                        <option value="7">환불완료</option>
+                        <option value="-1">-주문상태-</option>
+                        <option value="0">배송준비</option>
+                        <option value="1">배송중</option>
+                        <option value="2">배송완료</option>
+                        <option value="3">결제대기</option>
+                        <option value="4">결제완료</option>
+                        <option value="5">환불대기</option>
+                        <option value="6">환불완료</option>
                     </select><i class="fas fa-sort-down"></i></label>
 
-                    <button type="button" class="tab_btn">변 경</button>
+                    <button type="button" class="tab_btn" id="status_change">변 경</button>
                 </div>
             </div>
 
@@ -646,64 +646,8 @@ select::-ms-expand{
                         <th>전화번호</th><th>금액</th><th>사용포인트</th><th>결제수단</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>
-                            <div class="custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="1" name="chk">
-                                <label for="1" class="custom-control-label"></label>
-                            </div>
-                        </td>
-                        <td>210529-50902-00</td>
-                        <td>배송중</td>
-                        <td>21/05/27 12:17:34</td>
-                        <td>이탈리아 의자 외 1</td>
-                        <td>1개</td>
-                        <td>서울</td>
-                        <td>홍길동</td>
-                        <td>010-1234-5678</td>
-                        <td>138,700원</td>
-                        <td>120p</td>
-                        <td>카드</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="2" name="chk">
-                                <label for="2" class="custom-control-label"></label>
-                            </div>
-                        </td>
-                        <td>210529-50902-00</td>
-                        <td>배송중</td>
-                        <td>21/05/27 12:17:34</td>
-                        <td>이탈리아 의자 외 1</td>
-                        <td>1개</td>
-                        <td>서울</td>
-                        <td>홍길동</td>
-                        <td>010-1234-5678</td>
-                        <td>138,700원</td>
-                        <td>120p</td>
-                        <td>카드</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="3" name="chk">
-                                <label for="3" class="custom-control-label"></label>
-                            </div>
-                        </td>
-                        <td>210529-50902-00</td>
-                        <td>배송중</td>
-                        <td>21/05/27 12:17:34</td>
-                        <td>이탈리아 의자 외 1</td>
-                        <td>1개</td>
-                        <td>서울</td>
-                        <td>홍길동</td>
-                        <td>010-1234-5678</td>
-                        <td>138,700원</td>
-                        <td>120p</td>
-                        <td>카드</td>
-                    </tr>
+                <tbody class="dlv_List">
+                    <!-- 배송현황 리스트  -->
                 </tbody>
             </table>
         </div>
@@ -732,6 +676,23 @@ select::-ms-expand{
 
 <script>
 $(document).ready(function() {
+    getDeliveryList()//전체 리스트 불러오기
+
+    $('#status_change').click( function() { //상태변경버튼
+        let jdata = getCheckData()
+        //let status = makeStatus($('#sele1 option:selected').val())
+        let status = $('#sele1 option:selected').val()
+        $.ajax({
+            url: "http://localhost:3000/changeDeliveryStatus",
+            type: "get",
+            data: {orderSeq:jdata,purchaseStatus:status},
+            success: function (msg) {
+                console.log(msg)
+            },
+            error: function () { console.log('error'); }
+        });
+    });
+
     $('.menu_header').click( function() { //사이드 메뉴 활성화
         $('.menu_header').removeClass('active')
         $(this).addClass('active');
@@ -767,7 +728,8 @@ $(document).ready(function() {
         console.log( $(this).val())
         $('.search_btn').click()
     });
-    $('#table1 tbody tr').click( function() { //테이블 누르면 체크
+    //$('#table1 tbody tr').click( function() {
+    $(document).on('click','#table1 tbody tr', function() { //테이블 누르면 체크
         let tr = $(this).find('input[type="checkbox"]');
         let c = tr.prop("checked");
         if(c){
@@ -825,6 +787,85 @@ function autoCheck() {
     }
 };
 
+// 배송현황 리스트
+function getDeliveryList() {
+    $.ajax({
+        url: "http://localhost:3000/getDeliveryStatusList",
+        type: "post",
+        success: function (list) {
+            console.log(list)
+            let app=''
+            //$(".dlv_List").html(''); //초기화
+            if (list.length == 0) {
+                app = '<tr><td colspan="12"><h3 style="font-size: 15px; margin-top: 10px;"><b>게시글이 없습니다.</b></h3></td></tr>'
+            }
+            else {
+                $.each(list, function (i, val) {
+                    app+= '<tr><td><div class="custom-checkbox"><input type="checkbox" class="custom-control-input" id="'+val.orderSeq+'" name="chk">'
+                        + '<label for="'+val.orderSeq+'" class="custom-control-label"></label></div></td>'
+                        + '<td>'+val.orderSeq+'</td>'
+                        + '<td>'+makeStatus(val.purchaseStatus)+'</td>'
+                        + '<td>'+makeDate(val.orderDate)+'</td>'
+                        + '<td>'+val.productName;
+                    
+                    if(val.productQuantity-1>0){  app += ' 외 '+(val.productQuantity-1)+'개'  }
+                    app+= '</td><td>'+val.totalQuantity+'개</td>'
+                        + '<td><div>'+val.deliveryAddress.split(' ')[0]+'</div><div>'+val.deliveryAddress.split(' ')[1]+'</div></td>'
+                    
+                    if(val.userName==0){ app += '<td>'+val.nickName+'</td>' }
+                    else{                app += '<td>'+val.userName+'</td>' }
+                    
+                    app +='<td>'+val.phone+'</td>'
+                        + '<td>'+makeComma(val.totalAmount)+'원</td>'
+                        + '<td>'+val.useMileage+' p</td>'
+                        + '<td>'+val.amountType.toUpperCase()+'</td>'
+                });
+
+            }
+            $(".dlv_List").append(app);
+        },
+        error: function () { console.log('error'); }
+    });
+};
+
+// 금액 콤마 삽입 정규식
+function makeComma(str) {
+    str = String(str);
+    return str.replace(/(\d)(?=(?:\d{3})+(?!\d))/g, '$1,');
+};
+
+// 날짜 형식
+function makeDate(str) {
+    return String(str.replace('T',' ').substr(2,14))
+};
+
+// 테이블 배송상태 입력
+function makeStatus(num) {
+    let status = ['배송준비','배송중','배송완료','결제대기','결제완료','환불대기','환불완료']
+    if(!isNaN(num)){ return status[num] }
+    else{           return '확인불가' }
+};
+
+function getCheckData() {
+    // let data = '{'
+    // $('.dlv_List input[type="checkbox"]').each(function(i){
+    //     if(this.checked){
+    //         let a = $(this).attr('id');
+    //         data += '"orderSeq":"'+a+'",';
+    //     }
+    // });
+    // data = data.substr(0, data.length-1)+'}'
+    // return JSON.parse(data)
+    let data=[], k=0;
+    $('.dlv_List input[type="checkbox"]').each(function(i){
+        if(this.checked){
+            data[k] = $(this).attr('id');
+            k++;
+        }
+    });
+
+    return data
+}
 
 </script>
 
