--- a/view/admin/mainAdmin.html
+++ b/view/admin/mainAdmin.html
@@ -451,7 +451,6 @@ select::-ms-expand{
     display: none;
 }
 
-
 .table td{
     vertical-align: middle;
     word-break:break-all;
@@ -680,16 +679,16 @@ $(document).ready(function() {
 
     $('#status_change').click( function() { //상태변경버튼
         let jdata = getCheckData()
-        //let status = makeStatus($('#sele1 option:selected').val())
         let status = $('#sele1 option:selected').val()
         $.ajax({
             url: "http://localhost:3000/changeDeliveryStatus",
             type: "get",
-            data: {orderSeq:jdata,purchaseStatus:status},
-            success: function (msg) {
+            data: {orderSeq:jdata,orderStatus:status},
+            success: function(msg) { 
                 console.log(msg)
+                getDeliveryList();
             },
-            error: function () { console.log('error'); }
+            error: function() { console.log('error'); }
         });
     });
 
@@ -795,7 +794,7 @@ function getDeliveryList() {
         success: function (list) {
             console.log(list)
             let app=''
-            //$(".dlv_List").html(''); //초기화
+            $(".dlv_List").html(''); //초기화
             if (list.length == 0) {
                 app = '<tr><td colspan="12"><h3 style="font-size: 15px; margin-top: 10px;"><b>게시글이 없습니다.</b></h3></td></tr>'
             }
@@ -804,10 +803,10 @@ function getDeliveryList() {
                     app+= '<tr><td><div class="custom-checkbox"><input type="checkbox" class="custom-control-input" id="'+val.orderSeq+'" name="chk">'
                         + '<label for="'+val.orderSeq+'" class="custom-control-label"></label></div></td>'
                         + '<td>'+val.orderSeq+'</td>'
-                        + '<td>'+makeStatus(val.purchaseStatus)+'</td>'
+                        + '<td>'+makeStatus(val.orderStatus)+'</td>'
                         + '<td>'+makeDate(val.orderDate)+'</td>'
                         + '<td>'+val.productName;
-                    
+
                     if(val.productQuantity-1>0){  app += ' 외 '+(val.productQuantity-1)+'개'  }
                     app+= '</td><td>'+val.totalQuantity+'개</td>'
                         + '<td><div>'+val.deliveryAddress.split(' ')[0]+'</div><div>'+val.deliveryAddress.split(' ')[1]+'</div></td>'
@@ -842,7 +841,10 @@ function makeDate(str) {
 // 테이블 배송상태 입력
 function makeStatus(num) {
     let status = ['배송준비','배송중','배송완료','결제대기','결제완료','환불대기','환불완료']
-    if(!isNaN(num)){ return status[num] }
+    // console.log(num)
+    // console.log(typeof(num))
+    // console.log(isNaN(Number(num)))
+    if(!isNaN(Number(num))){ return status[num] }
     else{           return '확인불가' }
 };
 
