--- a/view/admin/mainAdmin.html
+++ b/view/admin/mainAdmin.html
@@ -572,17 +572,17 @@ select::-ms-expand{
         
         <!-- 검색화면 -->
         <div class="search_wrap">
+            <form id="search_form">
             <div class="search_box">
-
                 <!-- 날짜 -->
                 <div class="search_date">
                     <div class="move_input">
                         <label>시작일</label>
-                        <input type="text" class="datepicker s_date">
+                        <input type="text" class="datepicker s_date" name="startDate">
                     </div>
                     <div class="move_input">
                         <label>종료일</label>
-                        <input type="text" class="datepicker e_date">
+                        <input type="text" class="datepicker e_date" name="endDate">
                     </div>
                 </div>
 
@@ -601,11 +601,11 @@ select::-ms-expand{
 
                 <!-- 검색 -->
                 <div class="search">
-                    <input type="text" placeholder="검색...">
+                    <input type="text" placeholder="검색..." name="word">
                     <button type="button" class="search_btn"><i class="fas fa-search"></i></button>
                 </div>
-
             </div>
+            </form>
         </div>
         
         <!-- 테이블박스 -->
@@ -651,13 +651,8 @@ select::-ms-expand{
             </table>
         </div>
 
-        
-        <div class="row" style="margin-top: 20px; justify-content:center; height: 20px;">
-            <div class="col offset-xl-3">
-                <nav aria-label="Page navigation">
-                    <ul class="pagination" id="pagination">123</ul>
-                </nav>
-            </div>
+        <div class="admin_page">
+            <!-- 배송현황 페이지 번호 -->
         </div>
         
     </div>
@@ -670,12 +665,44 @@ select::-ms-expand{
 <script src="../../assets/js/jquery.min.js"></script>
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script><!-- jQuery UI 라이브러리 -->
+<script src="../../js/jquery.twbsPagination.min.js"></script>
 <!-- <script src="../../js/includeHTML.js"></script>
 <script src="../../js/header.js"></script> -->
 
 <script>
 $(document).ready(function() {
     getDeliveryList()//전체 리스트 불러오기
+    
+    
+    $('.search_btn').click( function() { // 검색버튼
+        
+        let a = $('#search_form').serialize()
+        console.log(a)
+        //let formorder1 =  decodeURIComponent($('#search_form').serialize());
+        //let formorder = formorder1.split('&');
+        
+        //모든 데이터 json형태로
+        // let fdata = '{'
+        // formorder.forEach(e => {
+        //     let j = e.split('=');
+        //     fdata += '"'+j[0]+'":"'
+        //     fdata += j[1]+'",'
+        // });
+        // fdata = fdata.slice(0,-1)
+        // fdata += '}';
+        // let jdata = JSON.parse(fdata)
+
+
+        // $.ajax({
+        //     url: "http://localhost:3000/changeDeliveryStatus",
+        //     type: "post",
+        //     data: ,
+        //     success: function(msg) { 
+        //         console.log(msg)
+        //     },
+        //     error: function() { console.log('error'); }
+        // });
+    });
 
     $('#status_change').click( function() { //상태변경버튼
         let jdata = getCheckData()
@@ -827,6 +854,48 @@ function getDeliveryList() {
     });
 };
 
+//글의 총 수를 구하는 함수
+function getProductSortCount(jdata) {
+	$.ajax({
+		url:"http://localhost:3000/getProductSortCount",
+		type:"get",
+		data:jdata,
+		success:function(count){ console.log(count); loadPage(count); },
+		error:function(){ alert('error'); }
+	});
+}
+
+//페이지 처리를 하는 함수
+function loadPage(totalCount) {
+	let pageSize = 9;
+	let nowPage = 1;
+	
+	let _totalPages = totalCount / pageSize;
+	console.log("페이지수:"+_totalPages);
+	
+	if(totalCount % pageSize > 0){
+		//_totalPages = Math.ceil(_totalPages);
+		_totalPages++;
+	}
+	//$(".store_page").twbsPagination("destroy"); //초기화
+	$(".admin_page").twbsPagination({
+		startPage: 1,
+		totalPages: _totalPages,
+		visiblePages:5, //페이지번호를 몇개까지 보일건가
+		first:'<span sria-hidden="true">«</span>',
+		prev:"이전",
+		next:"다음",
+		last:'<span sria-hidden="true">»</span>',
+		initiateStartPageClick:false, //온 페이지 클릭이 자동실행여부 결정
+		onPageClick:function(event,page){
+			nowPage = page;
+			console.log('nowPage : '+page);
+            //$('html').scrollTop(0)
+		}
+	});
+    $(".admin_page").twbsPagination("changeTotalPages",_totalPages,nowPage);
+}
+
 // 금액 콤마 삽입 정규식
 function makeComma(str) {
     str = String(str);
@@ -848,16 +917,8 @@ function makeStatus(num) {
     else{           return '확인불가' }
 };
 
+//체크된 상자 시퀀스 번호 배열로 리턴
 function getCheckData() {
-    // let data = '{'
-    // $('.dlv_List input[type="checkbox"]').each(function(i){
-    //     if(this.checked){
-    //         let a = $(this).attr('id');
-    //         data += '"orderSeq":"'+a+'",';
-    //     }
-    // });
-    // data = data.substr(0, data.length-1)+'}'
-    // return JSON.parse(data)
     let data=[], k=0;
     $('.dlv_List input[type="checkbox"]').each(function(i){
         if(this.checked){
@@ -865,7 +926,6 @@ function getCheckData() {
             k++;
         }
     });
-
     return data
 }
 
