--- a/view/login/login.html
+++ b/view/login/login.html
@@ -54,6 +54,7 @@
                 
                     <img class="my-auto" src="../../assets/img/kakaotalk_black_logo_icon_147117.png" width="23px" style="margin-top: -5px;margin-right: 0px;padding-bottom: 0px;padding-right: 0px;padding-left: 0px;margin-left: -47px;">
                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 카카오톡 계정 로그인
+                  
                     </button>
             </div>
         </div>
@@ -177,12 +178,63 @@
     // 카카오 로그인 API
     // https://injekim97.tistory.com/137
     // https://developers.kakao.com/sdk/reference/js/release/Kakao.API.html#.request
+
+    // 넘어온 값이 빈값인지 체크합니다. 
+    // !value 하면 생기는 논리적 오류를 제거하기 위해 
+    // 명시적으로 value == 사용 
+    // [], {} 도 빈값으로 처리 
+    var isEmpty = function(value){ 
+    if( value == "" || value == null || value == undefined || ( value != null && typeof value == "object" && !Object.keys(value).length ) ){
+        return true
+        } else { 
+        return false 
+        } 
+    }
+
+    //파라미터값 가져오도록 하는 함수
+    function getParameter(name) {
+        name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+        var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
+            results = regex.exec(location.search);
+        return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+    }
+    let code = getParameter("code");
+    
+
+    Gokakao();
+    function Gokakao(code){
+        if (isEmpty(code) == false){
+            alert("작동함?");
+            alert(code);
+        } else {
+            alert("작동안함");
+        }
+    }
+
+
     function loginWithKakao() {
         alert('로긴카카오 클릭됨');
-        
 
-
+        location.href = "https://kauth.kakao.com/oauth/authorize?client_id=e55eb67c927feac9076da403729a23f8&redirect_uri=http://localhost:8090/view/login/login.html&response_type=code"
         
+        /*
+        $.ajax({
+            url: "http://localhost:3000/kakaologin",
+            type: "post",
+            data: JSON,
+            async: false,
+            dataType: 'text',
+            success:function(res){
+                alert("kakao ajax 성공");
+                alert(res);
+                location.href = res;
+            }, error:function(res){
+                alert("kakao ajax 실패");
+            }
+        });
+        */
+
+        /*
         $.ajax({
             url: "http://localhost:3000/login/getKakaoAuthUrl",
             type: "post",
@@ -197,31 +249,13 @@
                 alert("kakao ajax 실패");
             }
         });
-        
-
-        /*
-        location.href = "https://kauth.kakao.com/oauth/authorize?client_id=e55eb67c927feac9076da403729a23f8&redirect_uri=http://localhost:8090/view/community/mainCommunity.html&response_type=code"
-        lonsole.log(시발왜안되는거야)
         */
+
+        
+       
+        
     }
 
-    /*
-    displayToken()
-    function displayToken() {
-        const token = getCookie('authorize-access-token')
-        if(token) {
-        Kakao.Auth.setAccessToken(token)
-        Kakao.Auth.getStatusInfo(({ status }) 
-        => {
-                if(status === 'connected') {
-                    document.getElementById('token-result').innerText = 'login success. token: ' + Kakao.Auth.getAccessToken()
-                } else {
-                    Kakao.Auth.setAccessToken(null)
-                }
-            })
-        }
-    }
-    */
 
     function getCookie(name) {
         const value = "; " + document.cookie;
